Thu Oct 15 06:15:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/BinaryCStream.m: Update system version number
	* src/NSCalendarDate.m: Implemented ([-copyWithZone:])
	* src/NSCountedSet.m: Rewrite ([-copyWithZone:])
	* src/include/NSData.h: Added GNUstep specific method for more
	efficient zone use.
	* src/NSData.m: Modified throughout to use NSZone functions for
	managing content memory.
	* src/NSGArray.m: Modified to use NSZone functions for managing
	content memory.  Also tidied coding methods.
	* src/include/NSGCString.h: Modified to use NSZone for contents.
	* src/NSGCString.m: Modified to use NSZone for contents and fixed
	bug in coding (couldn't cope with embedded nuls in string).
	* src/NSGDictionary.m: Modified to use NSZone for contents.
	* src/include/NSGString.h: Modified to use NSZone for contents.
	* src/NSGString.m: Modified to use NSZone for contents.
	* src/NSObject.m: Added fastZone() function.
	* src/PortCoder.m: Updated system version number
	* src/include/NSSet.h: Added ([+setWithSet:])
	* src/NSSet.m: Added ([+setWithSet:]) and fixed ([-copyWithZone:])
	* src/include/NSString.h: Added GNUstep specific methods for faster
	use of zones.
	* src/NSString.m: Modified to use NSZone functions for contents.
	* src/include/NSZone.h: Removed non-existent methods and changed
	structure layout to support NSZoneFromPointer()
	* src/NSZone.m: Rewrite to support NSZoneFromPointer(),
	NSRecycleZone() and fix a couple of bugs.  Needs more work to
	make simpler and more efficient.
	* src/include/fast.x: Added fastZone()

Wed Oct 14 11:29:11 1998  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

        * src/NSString.m ([NSString -stringByResolvingSymlinksInPath]): 
        Implement.

Wed Oct 14 10:27:47 1998  Masatake Yamato  <masata-y@is.aist-nara.ac.jp>

        * src/NSString.m ([NSString +pathWithComponents:]): 
        Use the first object of components as the base path string
        instead of null string([NSString string]).
